--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <p><strong>Endereço:</strong> R. Vinte e Três de Setembro, 233 - Centro, Sobral - CE</p>
           <p><strong>WhatsApp:</strong> (88) 9.9302-6518</p>
           <p><strong>Instagram:</strong> @CantinhodaPanelada</p>
-          <p><strong>Email:</strong> cantinhoodapanelada@gmail.com</p>
+          <p><strong>Email:</strong> cantinhodapanelada51@gmail.com</p>
         </div>
       </div>
     </footer>
