--- a/index.html
+++ b/index.html
@@ -119,8 +119,12 @@
           <li><strong>Coca-Cola Zero (600ml)</strong> - R$ 8,00</li>
           <li><strong>Coca-Cola Zero (1L)</strong> - R$ 9,50</li>
           <li><strong>Delrio (1L)</strong> - R$ 6,50</li>
+          <li><strong>Heineken (250ml)</strong> - R$ 7,00</li>
+          <li><strong>Budweiser (330ml)</strong> - R$ 7,00</li>
+          <li><strong>Stella Artois (330ml)</strong> - R$ 9,00</li>
         </ul>
       </div>
+      
     </section>
 
     <section id="galeria" class="max-w-6xl mx-auto px-4 py-16">
