--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
       <div class="bg-white bg-opacity-90 rounded-2xl p-8 max-w-3xl mx-auto shadow-xl">
         <h2 class="text-4xl text-red-700 mb-6 text-center">Nosso Cardápio</h2>
         <ul class="space-y-4 text-lg sm:text-xl text-center text-gray-900">
-          <li><strong>Panelada completa</strong> - R$ 30,00 <br><span class="text-sm">Acompanha arroz branco e farofa.</span></li>
-          <li><strong>Panelada simples</strong> - R$ 25,00 <br><span class="text-sm">Acompanha farofa.</span></li>
-          <li><strong>Feijoada completa</strong> - R$ 22,00 <br><span class="text-sm">Acompanha arroz branco e farofinha.</span></li>
-          <li><strong>Feijoada simples</strong> - R$ 18,00 <br><span class="text-sm">Acompanha farofinha.</span></li>
+          <li><strong>Panelada completa</strong> - R$ 30,00 <br><span class="text-sm">Acompanha arroz branco, farofinha e verdurinha.</span></li>
+          <li><strong>Panelada simples</strong> - R$ 25,00 <br><span class="text-sm">Acompanha farofinha e verdurinha.</span></li>
+          <li><strong>Feijoada completa</strong> - R$ 22,00 <br><span class="text-sm">Acompanha arroz branco, farofinha e verdurinha.</span></li>
+          <li><strong>Feijoada simples</strong> - R$ 18,00 <br><span class="text-sm">Acompanha farofinha e verdurinha.</span></li>
         </ul>
         <h3 class="text-3xl text-red-700 mt-10 mb-4 text-center">Bebidas</h3>
         <ul class="space-y-2 text-lg sm:text-xl text-center text-gray-900">
